alignmentissue fixed

--- a/respon.css
+++ b/respon.css
@@ -3,6 +3,7 @@ body{
     font-family: "Sora", sans-serif;
     background-color: black;
     color: white;
+    overflow-x: hidden;
 }
 h1{
     background: -webkit-linear-gradient(#7b48e1, #f6f2fe);
@@ -324,7 +325,7 @@ nav ul {
         display: block;
     }
     .phone-items{
-        top: 4px;
+        top: 13px;
         margin-left: 68%;
     }
     .hero-container{
@@ -357,9 +358,15 @@ nav ul {
     }
     .navigation{
         background-color:#3a1e70 ;
+        padding-left: 20px;
+        gap: 5rem;
+        justify-content: initial;
     }
     .left-container{
         width: 100%;
+    }
+    .left-container h1{
+        font-size: 24px;
     }
     .left-container h1,h2,p{
         padding: 10px;
@@ -369,16 +376,16 @@ nav ul {
 
     }
     .phone-items{
-        top: 10px;
-        margin-left: 64%;
+        top: 16px;
+        margin-left: 55%;
     }
     .hero-container{
-        padding: 55px 0px;
+        padding: 76px 32px;
         flex-direction: column-reverse;
     }
     .profile img{
-        height: 426px;
-        width: 376px;
+        height: 380px;
+        width: 310px;
     }
     .social_links{
         gap: 1rem;
